* Add Potator a Watara Supervision emulator core, roms go into /storage/roms/supervision
* gptokeyb bump and fix missing trigger actions
* Crystal bump to latest
* emuelec-emulationstation bump to latest
* bump Retroarch to v1.9.3
* Switch Duckstation name to Swanstation
* Rework 32bit core detection on emuelecRunEmu.sh
* Yabasanshiro: Revert back to 7ae0de7 as it gives much better performance

Amlogic-ng: 
* Enable qca6174 drivers (Fixes issues #611)

Odroid Go Advance/Super & GameForce: 

* Bump kernel to use latest Mali G31 blobs
* Introduce RetroRun, available for Flycast for the moment

GameForce:
* Move global hotkey to button 1 to avoid conflicting hotkeys in retroarch, 1+Dpad up/down for volume, 1+Dpad lef/right for brightness
* Brightness was not correctly calculated on GameForce (PR #619)

# New ee_fstype 
Starting with 4.2 a new option for people that are having issues with the EEROMS partition is available, but it comes with a few warnings, please read carefully and decide if this is for you:

* To be able to use this option a fresh install is required
* Do not change anything if FAT32 works for you
* Use EXFAT instead of NTFS when possible
* If you use Linux EXT4 might be the best option for you!
* I repeat do not change anything if FAT32 works for you
* Keep in mind this is a very experimental feature
* If you insist in using NTFS please read the warning below

## Intructions

If you would like to use FAT32 skip steps 2,3 and 4

1.- Flash the correct test image to your SD, it needs to be the .img.gz on a CLEAN sd, it will not work on update (.tar)
2.- Right after it is flashed open the first partition EMUELEC
3.- Create a file named ee_fstype (no extension!) on the root of the EMUELEC partition
4.- Open the file and type `exfat`,`ntfs` or `ext4` save it and close it
5.- Do whatever you do to the partition (dtb change, ee_default.txt, etc)
6.- Test
