@@ -2,7 +2,7 @@
 # Copyright (C) 2020-present Shanti Gilbert (https://github.com/shantigilbert)
 
 PKG_NAME="Crystal"
-PKG_VERSION="a07f0a51eaf4ac6d745d5e92eef0a3458de27180"
+PKG_VERSION="9557798781940ad3be63cf407d149fad89600c00"
 PKG_REV="1"
 PKG_ARCH="any"
 PKG_LICENSE="GPL"
