@@ -117,6 +117,7 @@ d    /storage/roms/ports/soniccd    	0777 root root - -
 d    /storage/roms/ports/bermuda    	0777 root root - -
 d    /storage/roms/ports/ecwolf     	0777 root root - -
 d    /storage/roms/pokemini             0777 root root - -
+d    /storage/roms/freej2me             0777 root root - -
 d    /storage/roms/pico-8       		0777 root root - -
 d    /storage/roms/savestates      		0777 root root - -
 d    /tmp/cache  
