@@ -8,7 +8,7 @@
 ee_console enable
 echo "Checking JDK..." > /dev/console
 
-JDKDEST="/emuelec/configs/jdk"
+JDKDEST="/storage/roms/bios/jdk"
 JDKNAME="zulu11.48.21-ca-jdk11.0.11"
 
 mkdir -p ${JDKDEST}
@@ -17,11 +17,22 @@ mkdir -p ${JDKDEST}
 [ "$(ls -A ${JDKDEST})" ] && JDKINSTALLED="yes" || JDKINSTALLED="no"
 
 if [ ${JDKINSTALLED} == "no" ]; then
+
+echo -e "GET http://google.com HTTP/1.0\n\n" | nc google.com 80 > /dev/null 2>&1
+if [ $? -ne 0 ]; then
+    echo "No internet connection, exiting..." > /dev/console
+    text_viewer -e -w -t "No Internet!" -m "You need to be connected to the internet to download the JDK\nNo internet connection, exiting...";
+    exit 1
+fi
+
     echo "Downloading JDK please be patient..." > /dev/console
     cd ${JDKDEST}/..
-    wget "https://cdn.azul.com/zulu-embedded/bin/${JDKNAME}-linux_aarch64.tar.gz" > /dev/console
+    wget "https://cdn.azul.com/zulu-embedded/bin/zulu11.48.21-ca-jdk11.0.11-linux_aarch64.tar.gz" > /dev/console 2>&1
     echo "Inflating JDK please be patient..." > /dev/console
-    tar xvfz ${JDKNAME}-linux_aarch64.tar.gz
+    tar xvfz ${JDKNAME}-linux_aarch64.tar.gz zulu11.48.21-ca-jdk11.0.11-linux_aarch64/lib > /dev/console 2>&1
+    tar xvfz ${JDKNAME}-linux_aarch64.tar.gz zulu11.48.21-ca-jdk11.0.11-linux_aarch64/bin > /dev/console 2>&1
+    tar xvfz ${JDKNAME}-linux_aarch64.tar.gz zulu11.48.21-ca-jdk11.0.11-linux_aarch64/conf > /dev/console 2>&1
+    rm zulu11.48.21-ca-jdk11.0.11-linux_aarch64/lib/*.zip
     mv ${JDKNAME}-linux_aarch64/* jdk
     rm -rf ${JDKNAME}-linux_aarch64*
     
@@ -29,8 +40,10 @@ if [ ${JDKINSTALLED} == "no" ]; then
         rm -rf ${JDKDEST}/${del}
     done
     echo "JDK done! loading core!" > /dev/console
-#    cp -rf /usr/lib/libretro/freej2me*.jar /storage/roms/bios
+    cp -rf /usr/lib/libretro/freej2me-lr.jar /storage/roms/bios
 fi
 
+clear > /dev/console < /dev/null 2>&1
+echo "Loading..." > /dev/console
 ee_console disable
 exit 0
